RESOLVED FIXED155942
AX: iOS: Can't navigate inside ContentEditable fields with voiceover enabled
https://bugs.webkit.org/show_bug.cgi?id=155942
Summary AX: iOS: Can't navigate inside ContentEditable fields with voiceover enabled
chris fleizach
Reported 2016-03-27 23:35:09 PDT
When a content-editable HTML field is embedded in a UIWebView and voiceover is enabled, it's impossible to move through the content to make edits. This is because setting kAXSelectedTExtRange fails (on OSX too) <rdar://problem/24209503>
Attachments
patch (7.24 KB, patch)
2016-03-27 23:42 PDT, chris fleizach
jdiggs: review+
chris fleizach
Comment 1 2016-03-27 23:42:54 PDT
Joanmarie Diggs
Comment 2 2016-03-28 14:23:19 PDT
Comment on attachment 275017 [details] patch +<script> + + description("This tests that the auto-filled buttons show up."); + C&P error? Also, this test is going to time out for GTK -- and I'd bet money it will also time out for EFL -- and I don't have time at the moment to address that. Therefore, it would be great if you could skip this test for both platforms, citing bug 133148.
chris fleizach
Comment 3 2016-03-28 16:54:50 PDT
(In reply to comment #2) > Comment on attachment 275017 [details] > patch > > +<script> > + > + description("This tests that the auto-filled buttons show up."); > + > > C&P error? > Yes will fix > Also, this test is going to time out for GTK -- and I'd bet money it will > also time out for EFL -- and I don't have time at the moment to address > that. Therefore, it would be great if you could skip this test for both > platforms, citing bug 133148. Yep will do
chris fleizach
Comment 4 2016-03-28 17:43:02 PDT
Note You need to log in before you can comment on or make changes to this bug.