AX: iOS: Can't navigate inside ContentEditable fields with voiceover enabled https://bugs.webkit.org/show_bug.cgi?id=155942

Reviewed by Joanmarie Diggs.

Source/WebCore:

The code to set the selected text range on a non-native text control (like a contenteditable) was either
wrong or broke at some point. It assumed that creating a Position with the contenteditable node with the right
offset would make a valid Position, but it almost never did.

Instead we can use this helper method to create a valid Position.

Test: accessibility/set-selected-text-range-contenteditable.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::setSelectedTextRange):

LayoutTests:

* accessibility/set-selected-text-range-contenteditable-expected.txt: Added.
* accessibility/set-selected-text-range-contenteditable.html: Added.
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:



Canonical link: https://commits.webkit.org/174069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198768 268f45cc-cd09-0410-ab3c-d52691b4dbfc